[package]
name = "rapier-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11"
#bevy_rapier3d = "0.22"
bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d" }
bevy-inspector-egui = "0.19"

[profile.dev]
opt-level = 2

[[bin]]
name = "collider_parent"
path = "src/collider_parent.rs"


[[bin]]
name = "mass_sync"
path = "src/mass_sync.rs"